--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,13 @@
 
 /* ! Variables */
 :root{
-    --x: ();
+    --colorPrimary: rgb(200, 250, 100);
+    --colorSecondary: rgb(250, 235, 215);
+    
+    --darkerPrimary: rgb(182, 255, 37);
+    --darkerSecondary: rgb(255, 220, 175);
+
+    --complementary: rgb(217, 155, 79);
 }
 
 /* ! General */
@@ -33,7 +39,7 @@ body {
     justify-content: start;
     align-items: center;
 
-    background-color: rgb(250, 235, 215);
+    background-color: var(--colorSecondary);
 }
 
 .header{
@@ -45,7 +51,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    background-color: rgb(200, 250, 100);
+    background-color: var(--colorPrimary);
 }
 
 #headerTitle{
@@ -72,9 +78,23 @@ body {
     overflow-x: scroll;
 }
 
+#reel::-webkit-scrollbar{
+    height: 0.3rem;
+    background-color: var(--darkerSecondary);
+}
+
+#reel::-webkit-scrollbar-thumb{
+    border-radius: 16px;
+    background-color: var(--complementary);
+}
+
 .reelPoster{
     height: 80%;
     transform: rotate(2deg);
+
+    user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
 }
 
 .reelPoster:hover{
@@ -82,9 +102,19 @@ body {
     transform: rotate(0deg);
 }
 
+.reelPoster:active{
+    height: 98%;
+    transform: rotate(0deg);
+
+    background-color: rgb(255, 255, 255);
+    opacity: 80%;
+}
+
 #slide{
     width: 100%;
     height: 10%;
+
+    text-align: center;
 
     display: flex;
     flex-direction: column;
