--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,7 +9,7 @@
     --colorPrimary: rgb(200, 250, 100);
     --colorSecondary: rgb(250, 235, 215);
     
-    --darkerPrimary: rgb(182, 255, 37);
+    --darkerPrimary: rgb(168, 209, 86);
     --darkerSecondary: rgb(255, 220, 175);
 
     --complementary: rgb(217, 155, 79);
@@ -126,6 +126,54 @@ body {
     user-select: none;
 }
 
+#infoButton{
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    
+    border: 0;
+    background-color: var(--colorPrimary);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    position: fixed;
+    bottom: -4rem;
+    right: 1rem;
+}
+
+#infoButton:active{
+    height: 2.8rem;
+    width: 2.8rem;
+    background-color: var(--darkerPrimary);
+}
+
+#infoButton img{
+    width: 90%;
+}
+
 #info{
-    display: none;
+    /* display: none; */
+    width: 98%;
+    height: 20%;
+    padding: 1rem 1.2rem;
+    border-radius: 16px 16px 0 0;
+
+    background-color: var(--colorPrimary);
+    text-align: justify;
+    overflow-y: auto;
+
+    position: fixed;
+    bottom: -20%;
+}
+
+#info::-webkit-scrollbar{
+    width: 0.3rem;
+    background-color: var(--darkerSecondary);
+}
+
+#info::-webkit-scrollbar-thumb{
+    border-radius: 16px;
+    background-color: var(--complementary);
 }
