--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -95,6 +95,8 @@ body {
     user-select: none;
     -webkit-user-drag: none;
     -webkit-user-select: none;
+
+    cursor: pointer;
 }
 
 .reelPoster:hover{
@@ -141,6 +143,8 @@ body {
     position: fixed;
     bottom: -4rem;
     right: 1rem;
+
+    cursor: pointer;
 }
 
 #infoButton:active{
@@ -151,10 +155,10 @@ body {
 
 #infoButton img{
     width: 90%;
+    -webkit-user-drag: none;
 }
 
 #info{
-    /* display: none; */
     width: 98%;
     height: 14%;
     padding: 1rem 1.2rem;
@@ -166,6 +170,8 @@ body {
 
     position: fixed;
     bottom: -20%;
+
+    cursor: help;
 }
 
 #info::-webkit-scrollbar{
